fixed game status display on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -143,6 +143,7 @@ body {
     justify-content: center;
     margin-top: 15px;
     color: #474747;
+    font-size: 16px;
 }
 
 .game-names {
@@ -329,7 +330,7 @@ body {
     }
 
     .game-tab {
-        height: 40px;
+        height: 60px;
         width: 100%;
     }
 
@@ -339,6 +340,19 @@ body {
 
     .game-tab:hover {
         transform: scale(1);
+    }
+
+    .game-time {
+        margin-top: 5px;
+        font-size: 12px;
+    }
+
+    .game-info {
+        grid-template-rows: 1fr 1fr;
+    }
+
+    .game-names {
+        font-size: 12px;
     }
 }
 
